--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,10 @@
     <title>VERMATTI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   	<meta charset="utf-8">
-    http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js
+    <script
+  			  src="https://code.jquery.com/jquery-2.2.4.min.js"
+  			  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+  			  crossorigin="anonymous"></script>
     <script>
     jQuery(document).ready(function(){
       addEventListener("load", function () {
@@ -24,7 +27,7 @@
     <link rel="stylesheet" href="css/shop.css" type="text/css" />
     <link rel="stylesheet" href="css/owl.carousel.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/owl.theme.css" type="text/css" media="all">
-    <link href="css/style.css" rel='stylesheet' type='text/css' />
+    <link href="css/app.css" rel='stylesheet' type='text/css' />
     <link href="css/fontawesome-all.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800"
@@ -44,7 +47,7 @@
 </head>
 <body>
     <app>Loading...</app>
-  <script src="js/jquery-2.2.3.min.js" type="text/javascript"> </script>
+
 	<script>
 		jQuery(document).ready(function () {
 			jQuery("#myModal").modal();
@@ -56,7 +59,7 @@
 	<!--search jQuery-->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<script src="js/classie-search.js"></script>
-	<script src="js/demo1-search.js"></script>
+
 	<!--//search jQuery-->
 	<!-- cart-js -->
 	<script src="js/minicart.js"></script>
@@ -89,16 +92,18 @@
 	</script>
 	<!-- carousel -->
 	<!-- Count-down -->
+  <!--
 	<script src="js/simplyCountdown.js"></script>
 	<link href="css/simplyCountdown.css" rel='stylesheet' type='text/css' />
 	<script>
+
 		var d = new Date();
 		simplyCountdown('simply-countdown-custom', {
 			year: d.getFullYear(),
 			month: d.getMonth() + 2,
 			day: 25
 		});
-	</script>
+	</script> -->
 	<!--// Count-down -->
 	<script src="js/owl.carousel.js"></script>
 	<script>
